# kueche

./: .gitignore  CHANGELOG.md  README.md  config.ini_skeleton  dashboard.py  kalender.py  kueche.py  media.py  pyproject.toml  radio.py  requirements-dev.txt  requirements.txt  run_kueche.py  userpanel.py
Sounds/: rename.py
kueche/: __init__.py  __main__.py  app.py  dashboard.py  debug_logger.py  kalender.py  media.py  observer.py  observerable.py  plugin.py  plugin_loader.py  radio.py  userpanel.py
kueche/plugins/: __init__.py
kueche/plugins/dashboard/: dashboard.py  plugin.py
kueche/plugins/kalender/: kalender.py  kalender_ui.py  plugin.py
kueche/plugins/media/: media.py  plugin.py
kueche/plugins/playlist/: playlist.py  plugin.py
kueche/plugins/radio/: plugin.py  radio.py
radio_stations/: localRadios  metalRadios  newsRadios
tests/: __init__.py  conftest.py  test_imports.py
